syntax = "proto3";

package post;

option go_package = "./protobuf/post";

message Messages {
  string message = 1;
}

message FileHeader {
  string filename = 1;
  string contentType = 2;
  uint64 size = 3;
  repeated string header = 4;
}

message PostForm {
  repeated FileHeader files = 1;
  string text = 2;
  bool allowComment = 3;
  string privacy = 4;
}

message PostIdPayload {
  string _id = 1;
}

service PostService {
  rpc CreatePost(PostForm) returns (Messages) {}
  rpc DeletePost(PostIdPayload) returns (Messages) {}
}